--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
@@ -26,6 +27,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "globals": "^16.0.0",
     "sequelize-cli": "^6.6.2"
   }
 }
